--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
+    <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
+
 <body>
     
+    <div class="container">
+        <div class="first-step">
+            <p>Clique no botão para calcular o seu IMC</p>
+            <button onclick="go(1,2)">Iniciar</button>
+        </div>
+        <form class="second-step">
+            <h3>Calculadora IMC</h3>
+            <hr>
+            <label for="peso">Digite seu peso:</label>
+            <input type="number" placeholder="Seu peso" id="peso">
+            <br><br>
+            <label for="altura">Digite a sua altura:</label>
+            <input type="number" placeholder="Seu altura" id="altura">
+            <br><br>
+            <button onclick="validate()">Calcular</button>
+        </form>
+        <div class="final-step">
+            <h3>Resultado!</h3>
+            <p id="resultado"></p>
+            <button onclick="go(3,2)">Calcular Novamente</button>
+            <button onclick="go(3,1)">Finalizar</button>
+        </div>
+    </div>
+
+    <script src="./src/scripts/imc.js"></script>
 </body>
+
 </html>
