--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
 <body>
     <header class="header">
-        <!-- <div class="header-container"> -->
-        <a class="logo" href="/">
-            <h1>IMC</h1>
-        </a>
+
+        <h1 class="logo">IMC</h1>
+
 
         <nav>
             <input type="checkbox" id="menu-hambuguer" />
@@ -27,38 +26,101 @@
             </label>
 
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contatct</a></li>
+                <li><a href="#habits">Bons Hábitos</a></li>
+                <li><a href="#alimentos">Alimentação Saudável</a></li>
+                <li><a href="#exercicios">Exercícios Físicos</a></li>
+                <li><a href="#saude">Saúde Mental</a></li>
             </ul>
         </nav>
-        <!-- </div> -->
+
     </header>
 
-    <div class="container">
-        <div class="first-step">
-            <p>Clique no botão para calcular o seu IMC</p>
-            <button onclick="go(1,2)">Iniciar</button>
+    <main>
+        <section class="imc-info">
+            <h2 class="title">O que é o IMC?</h2>
+            <p>O Índice de Massa Corporal (IMC) é uma medida utilizada para avaliar se uma pessoa está dentro do peso
+                ideal, levando em conta a sua altura e peso. Ele é calculado dividindo o peso (em quilogramas) pela
+                altura ao quadrado (em metros).</p>
+            <p><strong>A fórmula do IMC é: </strong>IMC = peso (kg) / altura² (m²)</p>
+        </section>
+
+        <div class="container">
+            <div class="first-step">
+                <p>Clique no botão para calcular o seu IMC</p>
+                <button onclick="go(1,2)">Iniciar</button>
+            </div>
+            <div class="second-step">
+                <h3>Calculadora IMC</h3>
+                <hr>
+                <label for="peso">Digite o seu peso:</label>
+                <input type="number" placeholder="Peso: ex - 70" id="peso">
+                <br>
+                <label for="altura">Digite a sua altura:</label>
+                <input type="number" placeholder="Altura: ex - 1.70" id="altura">
+                <br>
+                <button onclick="validate()">Calcular</button>
+            </div>
+            <div class="final-step">
+                <h3>Resultado!</h3>
+                <p id="resultado"></p>
+                <button onclick="go(3,2)">Calcular Novamente</button>
+                <button onclick="go(3,1)">Finalizar</button>
+            </div>
         </div>
-        <form class="second-step">
-            <h3>Calculadora IMC</h3>
-            <hr>
-            <label for="peso">Digite seu peso:</label>
-            <input type="number" placeholder="Seu peso" id="peso">
-            <br><br>
-            <label for="altura">Digite a sua altura:</label>
-            <input type="number" placeholder="Seu altura" id="altura">
-            <br><br>
-            <button onclick="validate()">Calcular</button>
-        </form>
-        <div class="final-step">
-            <h3>Resultado!</h3>
-            <p id="resultado"></p>
-            <button onclick="go(3,2)">Calcular Novamente</button>
-            <button onclick="go(3,1)">Finalizar</button>
-        </div>
-    </div>
+        <section class="habits" id="habits">
+            <h2 class="title">Bons Hábitos</h2>
+
+            <article id="alimentos">
+                <h3>Alimentação Saudável</h3>
+                <p>Uma alimentação saudável é essencial para manter o peso adequado e melhorar a saúde. Ela deve ser
+                    rica em nutrientes, equilibrada, e incluir uma variedade de alimentos como frutas, vegetais, cereais
+                    integrais, proteínas magras e gorduras saudáveis. Evitar alimentos processados, ricos em açúcar e
+                    gordura saturada, também ajuda a manter o corpo saudável e bem nutrido.</p>
+                <ul>
+                    <li>- Priorize alimentos naturais como frutas e verduras.</li>
+                    <li>- Modere o consumo de açúcar e alimentos ultraprocessados.</li>
+                    <li>- Beba água regularmente.</li>
+                </ul>
+            </article>
+
+            <article id="exercicios">
+                <h3>Exercícios Físicos</h3>
+                <p>Praticar atividades físicas regularmente é fundamental para a manutenção do peso saudável e para o
+                    bom funcionamento do corpo. Os exercícios ajudam a queimar calorias, fortalecem os músculos,
+                    melhoram o condicionamento físico e previnem doenças.</p>
+                <ul>
+                    <li>- Pratique pelo menos 30 minutos de atividade física por dia.</li>
+                    <li>- Experimente exercícios como caminhada, corrida, natação, ou musculação.</li>
+                    <li>- Encontre uma atividade que você goste para facilitar a adesão à rotina.</li>
+                </ul>
+            </article>
+
+            <article id="saude">
+                <h3>Saúde Mental</h3>
+                <p>A saúde mental está diretamente relacionada ao bem-estar físico. O estresse e a ansiedade podem
+                    afetar os hábitos alimentares e a motivação para realizar exercícios. Por isso, é importante adotar
+                    práticas que ajudem a cuidar da mente.</p>
+                <ul>
+                    <li>- Pratique técnicas de relaxamento como meditação ou respiração profunda.</li>
+                    <li>- Durma o suficiente para recuperar as energias.</li>
+                    <li>- Converse com amigos, familiares ou profissionais da área para lidar com situações
+                        estressantes.</li>
+                </ul>
+            </article>
+        </section>
+    </main>
+    <footer class="footer">
+        <h4>IMC</h4>
+        <nav class="contact">
+            <ul>
+                <li><a rel='noopener noreferrer' href="https://api.whatsapp.com/send?phone=5571987740164&text=Ol%C3%A1%20parabéns%20pelo%20seu%20trabalho!" target="_blank">whatsApp</a></li>
+                <li><a rel='noopener noreferrer' href="https://www.linkedin.com/in/yanndarkzinnn/" target="_blank">LinkedIn</a></li>
+                <li><a rel='noopener noreferrer' href="https://github.com/YannDarkz?tab=repositories" target="_blank">github</a></li>
+            </ul>
+        </nav>
+
+    </footer>
+
 
     <script src="./src/scripts/imc.js"></script>
 </body>
